deployment/streamlit/k8s-native/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: demo-streamlit
  labels:
    rollout.one-click.dev/name: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      rollout.one-click.dev/name: streamlit
  template:
    metadata:
      labels:
        rollout.one-click.dev/name: streamlit
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: streamlit
          image: docker.io/janlauber/one-click-demo:0.1.0
          ports:
            - containerPort: 8501
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /data
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: nginx
      serviceAccount: nginx
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
