deployment/streamlit/k8s-native/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-streamlit-svc
  namespace: demo-streamlit
  labels:
    rollout.one-click.dev/name: streamlit
spec:
  ports:
    - name: http-streamlit
      protocol: TCP
      port: 1880
      targetPort: 1880
  selector:
    rollout.one-click.dev/name: streamlit
  clusterIP: 10.20.3.20
  clusterIPs:
    - 10.20.3.20
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
